# SwagDigitClassifier3000

./: .gitignore  Dockerfile  Readme.md  digit_classifier.pkl  digits_par_jean-michel_version_0.3b.ipynb  docker-compose.yml  images.db  locust.py  main.py  pyproject.toml  sqlite.py  update_model.py
templates/: index.html
